Launch Button Creation Form Upgrade + Fixes - Added <dialog-panel> tag to reference a material dialog used for forms or alerts. Modular improvements forthcoming. - Added Hypnospace Outlaw test images because it's the only game that works well natively on my chromebook, and I want to test on it eventually. - Added flex-wrap to form so that it fits in the new panel. - Removed obsolete boxing around 'Add' button - Added handling for null hover-logo property in form. - Added blur filter to launch button hover effect, might be too much.

--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@ body{
 
 #newLinkFormBox{
     display: flex;
+    flex-wrap: wrap;
 }
 
 .textbox{
@@ -12,11 +13,6 @@ body{
     width: 200px;
     height: 50;
     color: white;
-}
-
-
-#newLinkFormBox{
-    display: none;
 }
 
 .buttonView{
